# slrc_sim_2026

./: .gitignore  DEBUG_PORTAL.md  README.md  README_CONTAINER.md  readme.md  rebuild.sh
Clues/: clues_final.md
Clues/Clue1/: Clue1.md
Clues/Clue2/: Clue2.md
Clues/Clue3/: Clue3.md
Clues/Clue4/: Clue4.md
Clues/Clue5/: Clue5.md
april_tag_decode/: .gitignore  README.md
april_tag_decode/april_tag/: sample_apriltag_detect.py  source_apriltag_env.sh  test_52h13_lowmem.c  test_52h13_lowmem.py
docker/: Dockerfile  entrypoint.sh
examples/: test_api.py  test_portal_apriltag_api.py  view_cameras.py
precomp_tasks/key_1/: readme.md
scripts/: build_container.sh  run_container.sh
slrc_sim_bridge/: setup.cfg  setup.py  test_api.py
slrc_sim_bridge/config/: arena_config.yaml  bridge.yaml
slrc_sim_bridge/deployment/: checklist.md  docker-compose.yaml  nginx.conf
slrc_sim_bridge/launch/: container_bridge.launch.py  contest_launch.py  host_sim.launch.py
slrc_tron_sim/: CMakeLists.txt  package.xml
slrc_tron_sim/launch/: sim.launch.py
slrc_tron_sim/urdf/: hostile_agent.urdf  lightcycle.urdf
slrc_tron_sim/worlds/: encom_grid.sdf  worldgen.py
src/: readme.md
src/slrc_sim_bridge/: package.xml  setup.py  test_api.py  view_cameras.py
src/slrc_sim_bridge/config/: arena_config.yaml  bridge.yaml
src/slrc_sim_bridge/launch/: container_bridge.launch.py  container_full.launch.py  container_sim.launch.py  contest_launch.py  host_sim.launch.py
src/slrc_sim_bridge/scripts/: hostile_controller.py
src/slrc_sim_bridge/slrc_sim_bridge/: api_node.py  config.py
src/slrc_sim_bridge/slrc_sim_bridge/utils/: portal_apriltag_gui.py  trajectory.py
utils/: hostile_controller.py
wifi_cred_change_tutorial/: readme.md
(+11 files in other folders)
